--- a/bot/webapp/templates/flashcards.html
+++ b/bot/webapp/templates/flashcards.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Flashcards</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="stylesheet" href="/static/css/flashcards.css">
+    <link rel="stylesheet" href="/static/css/flashcards.css?v=20251225">
 </head>
 <body>
     <div id="app">
@@ -148,6 +148,6 @@
         </div>
     </div>
 
-    <script src="/static/js/flashcards.js"></script>
+    <script src="/static/js/flashcards.js?v=20251225"></script>
 </body>
 </html>
