--- a/bot/webapp/static/css/flashcards.css
+++ b/bot/webapp/static/css/flashcards.css
@@ -368,6 +368,8 @@ body {
     font-size: 18px;
     line-height: 1.35;
     font-weight: 500;
+    white-space: pre-wrap;
+    word-break: break-word;
 }
 
 .card-front p, .card-back p {
