Make shuffle/reverse buttons icon-only

--- a/bot/webapp/templates/flashcards.html
+++ b/bot/webapp/templates/flashcards.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Flashcards</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="stylesheet" href="/static/css/flashcards.css?v=20251226_3">
+    <link rel="stylesheet" href="/static/css/flashcards.css?v=20251226_5">
 </head>
 <body>
     <div id="app">
@@ -65,8 +65,8 @@
                 <div class="progress-info">
                     <span id="card-counter">1/10</span>
                 </div>
-                <button id="shuffle-cards" class="btn-secondary" type="button">🔀</button>
-                <button id="toggle-reverse" class="btn-secondary" type="button">↔ Reverse</button>
+                <button id="shuffle-cards" class="btn-icon-only" type="button" title="Shuffle">🔀</button>
+                <button id="toggle-reverse" class="btn-icon-only" type="button" title="Reverse">↔</button>
             </div>
             <div class="card-container">
                 <div id="flashcard" class="flashcard">
@@ -164,6 +164,6 @@
         </div>
     </div>
 
-    <script src="/static/js/flashcards.js?v=20251226_3"></script>
+    <script src="/static/js/flashcards.js?v=20251226_5"></script>
 </body>
 </html>
